--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&display=swap");
 
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -9,14 +9,171 @@
 body {
   margin: 0;
   background-color: rgb(203, 230, 221);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Basic Button Styles */
+button {
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 0.75rem;
+  /* Rounded corners */
+  background: coral;
+  /* Gradient background */
+  color: white;
+  cursor: pointer;
+}
+
+input {
+  font-size: 1rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.75rem;
+  border: 1px solid black;
+}
+
+img {
+  width: 4rem;
+  border-radius: 5rem;
+  border: 2px solid black;
+  margin: 0.5rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+
+#logo {
+  margin-right: 3rem;
+}
+
+@media screen and (min-width: 1280px) {
+  #logo {
+    margin-right: 40rem;
+  }
+}
+
+#home-container {
+  display: flex;
+  height: 90%;
+  flex-direction: column;
+}
+
+#profile-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+#card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: wheat;
+  width: 300px;
+  margin: auto;
+  margin-top: 100px;
+  border: 1px solid black;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+#user-list {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.5rem;
+  background: wheat;
+  width: 80%;
+  border: 1px solid black;
+  border-radius: 2rem;
+  margin-top: 2rem;
+}
+
+#friend-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#chat-window {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 85vh;
+  margin: 10px;
+  overflow: hidden;
+
+}
+
+#chat-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+
+  & button {
+    border-radius: 50%;
+    font-size: 2rem;
+    right: 10px;
+    position: absolute;
+    background: crimson;
+    padding: 0.5rem 0.85rem;
+  }
+
+  & #chat-title {
+    font-size: 2rem;
+  }
+
+  & img {
+    left: 10px;
+    position: absolute;
+  }
+}
+
+#message-input {
+  bottom: 5px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: .5rem;
+
+  & button {
+    margin: 10px;
+  }
+
+  & input {
+    width: 100%;
+  }
+}
+
+#messages {
+  border: 1px solid black;
+  height: 70vh;
+  border-radius: 1rem;
+  margin: 10px;
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  align-items: flex-end;
 }
